@@ -6,6 +6,9 @@ What's New in IDLE 2.6.3rc1?
 - Windows: Version string for the .chm help file changed, file not being
   accessed  Patch 5783 Guilherme Polo
 
+- Tk 8.5 Text widget requires 'wordprocessor' tabstyle attr to handle
+  mixed space/tab properly. Issue 5129, patch by Guilherme Polo.
+
 What's New in IDLE 2.6.2rc1?
 ============================
 
